[workspace]
members = [
    "nes-emulator",
    "nes-emulator-ui"
]
resolver="2"

[profile.dev]
opt-level = 0

[profile.realtime]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = false

[profile.release]
opt-level = 3
lto = true


[patch.crates-io]
egui = { git = "https://github.com/emilk/egui" }
egui_extras = { git = "https://github.com/emilk/egui" }
egui-wgpu = { git = "https://github.com/emilk/egui" }
egui-winit = { git = "https://github.com/emilk/egui" }
#egui_extras = { git = "https://github.com/emilk/egui" }
#egui = { path = "../../../egui/egui" }
#egui-wgpu = { path = "../../../egui/egui-wgpu" }
#egui-winit = { path = "../../../egui/egui-winit" }