[workspace]
resolver="2"
members = [
    "nes-emulator-shell",
    "nes-emulator-app",
    "nes-emulator-android",
]

# We don't want to track a Cargo.lock for nes-emulator
exclude = [
    "nes-emulator",
]

[profile.dev]
opt-level = 0

[profile.realtime]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = false

[profile.release]
opt-level = 3
lto = true


[patch.crates-io]
#egui = { git = "https://github.com/emilk/egui" }
#egui_extras = { git = "https://github.com/emilk/egui" }
#egui-wgpu = { git = "https://github.com/emilk/egui" }
#egui-winit = { git = "https://github.com/emilk/egui" }
#egui_extras = { git = "https://github.com/emilk/egui" }
#egui = { path = "../../../egui/egui" }
#egui-wgpu = { path = "../../../egui/egui-wgpu" }
#egui-winit = { path = "../../../egui/egui-winit" }

# This branch of Winit has an updated Android backend based on android-activity
# Note: The winit branches are current misnamed:
# - "android-activity" is based on Winit 0.27 (required for Egui compatibility)
# - "android-activity-0.27" is based on Winit master
# The -0.27 branch is currently associated with a pull request so we'll just
# stick with these names for now
winit = { git = "https://github.com/rib/winit", branch = "android-activity" }