[package]
name = "nes-emulator-app"
version = "0.1.0"
authors = ["Robert Bragg <robert@sixbynine.org>"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "nes_emulator"

[features]
default = [ "unsafe-opt", "nsf-player", "cpu-trace", "cpu-debugger", "sprite-view", "macro-builder", "trace-events" ]
unsafe-opt = [ "nes-emulator-shell/unsafe-opt" ]
nsf-player = [ "nes-emulator-shell/nsf-player" ]
ppu-simulator = [ "nes-emulator-shell/ppu-simulator" ]

cpu-trace = [ "nes-emulator-shell/cpu-trace" ]
cpu-debugger = [ "nes-emulator-shell/cpu-debugger" ]
trace-events = [ "nes-emulator-shell/trace-events" ]

sprite-view = [ "nes-emulator-shell/sprite-view" ]
macro-builder = [ "nes-emulator-shell/macro-builder" ]

[dependencies]
clap = { version = "3.2.6", features = ["derive", "cargo"] }
anyhow = "1"
log = "0.4"
egui = "0.21"
nes-emulator-shell = { path = "../nes-emulator-shell", default-features = false, features = ["unsafe-opt"] }

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.21", features = [ "wgpu" ] }
env_logger = "0.9"

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#eframe = { version = "0.21", features = [ "persistence" ] }
#console_error_panic_hook = "0.1.6"
#wasm-logger = "0.2"
#tracing-wasm = "0.2"
