[package]
name = "nes-emulator-shell"
version = "0.1.0"
authors = ["Robert Bragg <robert@sixbynine.org>"]
edition = "2021"

[features]
default = [ "unsafe-opt", "nsf-player", "cpu-trace", "cpu-debugger", "sprite-view", "macro-builder", "trace-events" ]
unsafe-opt = [ "nes-emulator/unsafe-opt" ]
nsf-player = [ "nes-emulator/nsf-player" ]
ppu-simulator = [ "nes-emulator/ppu-sim" ]

cpu-trace = [ "nes-emulator/trace" ]
cpu-debugger = [ "nes-emulator/debugger" ]
trace-events = [ "nes-emulator/trace-events" ]

sprite-view = [ "nes-emulator/ppu-hooks" ]
macro-builder = [ "nes-emulator/ppu-hooks" ]

wasm = [ "nes-emulator/wasm", "instant/wasm-bindgen", "cpal/wasm-bindgen" ]

[dependencies]
nes-emulator = { path = "../nes-emulator", default-features = false, features = ["unsafe-opt"] }
log = "0.4"
instant = "0.1"
bytemuck = "1.9"
bitflags = "1"
sha2 = "0.10"
hex-literal = "0.3"
crc32fast = "1"
anyhow = "1"
image = "0.23"
clap = { version = "3.2.6", features = ["derive", "cargo"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
egui = "0.19"
egui_extras = "0.19"
eframe = { version = "0.19" }
ring-channel = "0.11"
cpal = { version = "0.14" }

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"