[package]
name = "nes-emulator-ui"
version = "0.1.0"
authors = ["Robert Bragg <robert@sixbynine.org>"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "nes_emulator"

[dependencies]
log = "0.4"
env_logger = "0.9"
winit = "0.26"
wgpu = "0.13"
pollster = "0.2"
egui = "0.18"
egui-wgpu = { version = "0.18", features = [ "winit" ] }
egui-winit = { version = "0.18", default-features = false }
bytemuck = "1.9"
cpal = "0.13"
ring-channel = "0.11"
anyhow = "1"
image = "0.23"
wav_io = "0.1.8"
rfd = "0.8"
clap = { version = "3.2.6", features = ["derive", "cargo"] }
nes-emulator = { path = "../nes-emulator" }



