[package]
name = "nes-emulator-ui"
version = "0.1.0"
authors = ["Robert Bragg <robert@sixbynine.org>"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "nes_emulator"

[features]
default = [ "unsafe-opt", "nsf-player", "cpu-trace", "cpu-debugger", "sprite-view", "macro-builder" ]
unsafe-opt = [ "nes-emulator/unsafe-opt" ]
nsf-player = [ "nes-emulator/nsf-player" ]
ppu-simulator = [ "nes-emulator/sim" ]

cpu-trace = [ "nes-emulator/trace" ]
cpu-debugger = [ "nes-emulator/debugger" ]
trace-events = [ "nes-emulator/trace-events" ]

sprite-view = [ "nes-emulator/ppu-hooks" ]
macro-builder = [ "nes-emulator/ppu-hooks" ]

[dependencies]
log = "0.4"
env_logger = "0.9"
winit = "0.26"
wgpu = "0.13"
pollster = "0.2"
egui = "0.18"
egui_extras = "0.18"
egui-wgpu = { version = "0.18", features = [ "winit" ] }
egui-winit = { version = "0.18", default-features = false, features = [ "clipboard" ] }
bytemuck = "1.9"
cpal = "0.13"
ring-channel = "0.11"
anyhow = "1"
image = "0.23"
wav_io = "0.1.8"
rfd = "0.8"
clap = { version = "3.2.6", features = ["derive", "cargo"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha2 = "0.10"
hex-literal = "0.3"
crc32fast = "1"
nes-emulator = { path = "../nes-emulator", default-features = false, features = ["unsafe-opt"] }

