[package]
name = "nes-emulator"
version = "0.1.0"
authors = ["Robert Bragg <robert@sixbynine.org>", "K <kamiyaowl@gmail.com>"]
edition = "2021"

[features]
default = [ "unsafe-opt", "nsf-player", "debugger", "ppu-hooks" ]
unsafe-opt = []
trace = []
trace-events = []
ppu-hooks = []
sim = []
nsf-player = []
debugger = []

[lib]
path = "src/lib.rs"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.60"

[dependencies]
log = "0.4"
bytemuck = "1.9"
bitflags = "1"
bitvec = "1.0.1"
select-rustc = "0.1.2"
anyhow = "1"

[dev-dependencies]
inventory = "0.1"