[package]
name = "nes-emulator"
version = "0.1.0"
authors = ["Robert Bragg <robert@sixbynine.org>", "K <kamiyaowl@gmail.com>"]
edition = "2021"

[features]
default = [ "unsafe-opt", "nsf-player", "debugger", "ppu-hooks", "trace-events", "io-stats" ]
unsafe-opt = []
trace = []
trace-events = []
io-stats = []
ppu-hooks = []
ppu-sim = []
nsf-player = []
debugger = []

[lib]
path = "src/lib.rs"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.60"

[dependencies]
log = "0.4"
bytemuck = "1.9"
bitflags = "1"
bitvec = "1.0.1"
anyhow = "1"

[dev-dependencies]
inventory = "0.1"